# azure_kinect_docker

./: .env  CMakeLists.txt  Dockerfile  check_intrinsics.cpp  docker-compose.yml  run.sh
